[package]
name = "yew_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
gloo-net = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
wasm-bindgen-futures = "0.4.49"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
